horizontal scroll fixed

--- a/resources/assets/scss/layout/_biography.scss
+++ b/resources/assets/scss/layout/_biography.scss
@@ -6,6 +6,8 @@
 
 	background: #000;
 	padding: 8rem 0 5rem 0;
+	overflow-x: hidden; 
+	
 }
 
 .bx-clone{
